fix: overlapping ui in volunteer page

--- a/src/shared-components/SearchFilterBar/SearchFilterBar.module.css
+++ b/src/shared-components/SearchFilterBar/SearchFilterBar.module.css
@@ -8,7 +8,7 @@
   align-items: stretch;
   gap: var(--space-1);
   flex-wrap: wrap;
-  height: var(--space-10);
+  min-height: var(--space-10);
 }
 
 .btnsBlockSearchBar {
